<resources>
    <string name="app_name">im here</string>
    <string name="interface_on_login">Interface on login</string>
    <string name="representation_app">Representation App</string>
    <string name="i_m_here">i\'m here</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="ainda_n_o_possui_uma_conta">Ainda não possui uma conta?</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="registro">Registro</string>
    <string name="nome">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="informe_seu_e_mail_para_lhe_enviarmos_um_link_de_recupera_o_de_acesso">Informe seu e-mail para lhe enviarmos um link de recuperação de acesso</string>
    <string name="registrar_agora">Registrar agora</string>
    <string name="salvar">Salvar</string>
    <string name="enviar">Enviar</string>
    <string name="voltar_para_o_login">Voltar para o login</string>
    <string name="e_mail_enviado">E-mail enviado</string>
    <string name="foi_enviado_um_e_mail_com_um_link_com_informa_es_de_como_recuperar_seu_acesso_verifique_seu_e_mail">Foi enviado um e-mail com um link com informações de como recuperar seu acesso. Verifique seu e-mail.</string>
    <string name="agenda">agenda</string>
    <string name="voltar">Voltar</string>
    <string name="rosivanm">Rosivanm</string>
    <string name="este_campo_n_o_pode_ficar_em_branco">Este campo não pode ficar em branco</string>
    <string name="enviando_informa_es">Enviando informações</string>
    <string name="a_caminho">A caminho</string>
    <string name="seus_compromissos_na_palma_da_sua_m_o">Seus compromissos na palma da sua mão!</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="rosivan_cardoso_ferreira">Rosivan Cardoso Ferreira</string>
    <string name="menu">Menu</string>
    <string name="novo_agendamento">Novo agendamento</string>
    <string name="meus_agendamentos">Meus agendamentos</string>
    <string name="local">Local</string>
    <string name="data">Data e Horário</string>
    <string name="descri_o">Descrição</string>
    <string name="breve_descri_o">Breve descrição</string>
    <string name="data_e_hor_rio">Data e horário</string>
</resources>