<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRegister"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:minHeight="600dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:id="@+id/backHome"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hr_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/representation_app"
                android:src="@drawable/arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/voltar"
                android:textColor="@color/new_gray"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/novo_agendamento"
            android:textColor="@color/primary_blue"
            android:layout_marginTop="20dp"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/local"
            android:textColor="@color/primary_gray"
            android:textSize="19sp" />

        <Spinner
            android:id="@+id/selectLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/data"
            android:textColor="@color/primary_gray"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/dateHour"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxLength="30"
            android:backgroundTint="@color/secondary_gray"
            android:focusable="false"
            android:fontFamily="@font/open_sans_semi_bold"
            android:hint="@string/data_e_hor_rio"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/descri_o"
            android:textColor="@color/primary_gray"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/textConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxLength="30"
            android:backgroundTint="@color/secondary_gray"
            android:fontFamily="@font/open_sans_semi_bold"
            android:hint="@string/breve_descri_o"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <Button
            style="@style/ButtonDefault"
            android:id="@+id/buttonSave"
            android:layout_marginTop="40dp"
            android:text="@string/salvar"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>