<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:fillViewport="true"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:minHeight="600dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/recuperar_senha"
                android:textColor="@color/purple"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/informe_seu_e_mail_para_lhe_enviarmos_um_link_de_recupera_o_de_acesso"
                android:textColor="@color/purple"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/hr_login"
                android:layout_width="230dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/interface_on_login"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                android:src="@drawable/forgotpassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/e_mail"
                android:textColor="@color/primary_gray"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/secondary_gray"
                android:fontFamily="@font/open_sans_semi_bold"
                android:hint="@string/digite_seu_e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_gray"
                android:textSize="17sp" />

            <Button
                style="@style/ButtonDefault"
                android:layout_marginTop="40dp"
                android:text="@string/enviar"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/voltar_para_o_login"
                android:onClick="navigationScreenLogin"
                android:textAlignment="center"
                android:textColor="@color/dark_purple"
                android:textSize="18sp" />
        </LinearLayout>
</ScrollView>