<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:fillViewport="true"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/hr_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/interface_on_login"
            android:scaleType="centerCrop"
            android:src="@drawable/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:minHeight="600dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/registro"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/nome"
                android:textColor="@color/primary_gray"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/secondary_gray"
                android:fontFamily="@font/open_sans_semi_bold"
                android:hint="@string/digite_seu_nome"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_gray"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/e_mail"
                android:textColor="@color/primary_gray"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/secondary_gray"
                android:fontFamily="@font/open_sans_semi_bold"
                android:hint="@string/digite_seu_e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_gray"
                android:textSize="17sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/senha"
                android:textColor="@color/primary_gray"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:backgroundTint="@color/secondary_gray"
                android:fontFamily="@font/open_sans_semi_bold"
                android:hint="@string/digite_sua_senha"
                android:inputType="textPassword"
                android:textColor="@color/dark_gray"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/confirme_sua_senha"
                android:textColor="@color/primary_gray"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/Confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:backgroundTint="@color/secondary_gray"
                android:fontFamily="@font/open_sans_semi_bold"
                android:hint="@string/digite_sua_senha"
                android:inputType="textPassword"
                android:textColor="@color/dark_gray"
                android:textSize="17sp" />

            <Button
                style="@style/ButtonDefault"
                android:layout_marginTop="40dp"
                android:text="@string/save"
                android:textAllCaps="false" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>